[package]
name = "type_speed"
version = "0.1.0"
authors = ["goldencm <goldencm203@potsdam.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.89"
conrod_core = "0.67.0"
conrod_piston = "0.67.0"
find_folder="*"
rand="*"
indexed-line-reader = "*"
linecount = "*"
